add product and fetch products done

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,5 +10,8 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "multer": "^2.0.1"
+  }
 }
