--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,14 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
-    "multer": "^2.0.1"
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.2",
+    "multer": "^2.0.1",
+    "nodemailer": "^7.0.5",
+    "path": "^0.12.7"
   }
 }
