--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "form-data": "^4.0.4",
     "jsonwebtoken": "^9.0.2",
+    "mailgun.js": "^12.1.0",
     "mongoose": "^8.18.2",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.5",
